[FIX] wrong behavior of one animation on smallest devices, corrected

--- a/src/sass/pages/restaurants.scss
+++ b/src/sass/pages/restaurants.scss
@@ -198,21 +198,14 @@
                         max-height: 200px;
                     }
                 }
-                .menu__starters__header__title {
-                    height: 100%;
-                    font-weight: 300;
-                    display: flex;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
-                }
-                .menu__starters__header__subtitle {
-                    height: 100%;
-                    font-weight: 300;
-                    display: flex;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
+                @media (max-width: 325px) {
+                    & p {
+                        display: block;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        max-width: 140px;
+                        max-height: 200px;
+                    }
                 }
                 .menu__starters__card__price {
                     animation: slide 1s;
@@ -251,6 +244,15 @@
                         max-height: 200px;
                     }
                 }
+                @media (max-width: 325px) {
+                    & p {
+                        display: block;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        max-width: 140px;
+                        max-height: 200px;
+                    }
+                }
                 .menu__dishes__card__price {
                     animation: slide 1s;
                     animation-fill-mode: forwards;
@@ -285,6 +287,15 @@
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         max-width: 210px;
+                        max-height: 200px;
+                    }
+                }
+                @media (max-width: 325px) {
+                    & p {
+                        display: block;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        max-width: 140px;
                         max-height: 200px;
                     }
                 }
